--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@use '../styles/_colors.scss';
+@import 'styles/_colors.scss';
 
 body {
   margin: 0;
@@ -9,5 +9,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
   min-width: 100vw;
+  background-color: $bg;
 }
 
