--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,4 +1,9 @@
-$black: #111;
+$black: #000;
 $white: #EEE;
 
+$primary: #150050;
+$secondary: #3F0071;
+$tertiary: #FB2576;
+
 $bg: $black;
+$text: $white;
