--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,18 @@
 @import 'styles/_colors.scss';
 
+html {
+  font-size: 10px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  font-size: 10px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
   min-width: 100vw;
   background-color: $bg;
+  color: $text;
 }
-
